// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text (isCI = false) > can cancel by pressing escape 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m a [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mOption A[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > caseSensitive: true makes input case-sensitive 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m a [39m[49m Option a
[36m│[39m  [90m[47m[7m A [27m[49m[39m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption A[22m",
  "
",
]
`;

exports[`text (isCI = false) > caseSensitive: true makes options case-sensitive 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m A [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mOption A[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "[36m◆[39m  foo
[46m[90m a [39m[49m Option A
[90m[47m[7m b [27m[49m[39m Option B

",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "[32m◇[39m  foo
[2mOption A[22m",
  "
",
]
`;

exports[`text (isCI = false) > input is case-insensitive by default 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m a [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption A[22m",
  "
",
]
`;

exports[`text (isCI = false) > long cancelled labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Select an option:
[36m│[39m  [46m[90m a [39m[49m This is a somewhat long
[36m│[39m   label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label 
[36m│[39m  This is a somewhat long 
[36m│[39m  label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label
[36m│[39m  [90m[47m[7m b [27m[49m[39m Short label
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  Select an option:
[90m│[39m  [9m[2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label [22m
[90m│[39m  [2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > long option labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Select an option:
[36m│[39m  [46m[90m a [39m[49m This is a somewhat long
[36m│[39m   label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label 
[36m│[39m  This is a somewhat long 
[36m│[39m  label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label
[36m│[39m  [90m[47m[7m b [27m[49m[39m Short label
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  Select an option:
[90m│[39m  [2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label [22m
[90m│[39m  [2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label[22m",
  "
",
]
`;

exports[`text (isCI = false) > long submitted labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Select an option:
[36m│[39m  [46m[90m a [39m[49m This is a somewhat long
[36m│[39m   label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label 
[36m│[39m  This is a somewhat long 
[36m│[39m  label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label
[36m│[39m  [90m[47m[7m b [27m[49m[39m Short label
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  Select an option:
[90m│[39m  [2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label [22m
[90m│[39m  [2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label[22m",
  "
",
]
`;

exports[`text (isCI = false) > options are case-insensitive by default 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m A [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption A[22m",
  "
",
]
`;

exports[`text (isCI = false) > renders message with options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m a [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption A[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > selects option by keypress 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m a [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption B[22m",
  "
",
]
`;

exports[`text (isCI = false) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "[36m◆[39m  foo
[46m[90m a [39m[49m Option A
[90m[47m[7m b [27m[49m[39m Option B

",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "[32m◇[39m  foo
[2mOption A[22m",
  "
",
]
`;

exports[`text (isCI = true) > can cancel by pressing escape 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m a [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mOption A[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > caseSensitive: true makes input case-sensitive 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m a [39m[49m Option a
[36m│[39m  [90m[47m[7m A [27m[49m[39m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption A[22m",
  "
",
]
`;

exports[`text (isCI = true) > caseSensitive: true makes options case-sensitive 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m A [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mOption A[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "[36m◆[39m  foo
[46m[90m a [39m[49m Option A
[90m[47m[7m b [27m[49m[39m Option B

",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "[32m◇[39m  foo
[2mOption A[22m",
  "
",
]
`;

exports[`text (isCI = true) > input is case-insensitive by default 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m a [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption A[22m",
  "
",
]
`;

exports[`text (isCI = true) > long cancelled labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Select an option:
[36m│[39m  [46m[90m a [39m[49m This is a somewhat long
[36m│[39m   label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label 
[36m│[39m  This is a somewhat long 
[36m│[39m  label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label
[36m│[39m  [90m[47m[7m b [27m[49m[39m Short label
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  Select an option:
[90m│[39m  [9m[2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label [22m
[90m│[39m  [2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > long option labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Select an option:
[36m│[39m  [46m[90m a [39m[49m This is a somewhat long
[36m│[39m   label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label 
[36m│[39m  This is a somewhat long 
[36m│[39m  label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label
[36m│[39m  [90m[47m[7m b [27m[49m[39m Short label
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  Select an option:
[90m│[39m  [2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label [22m
[90m│[39m  [2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label[22m",
  "
",
]
`;

exports[`text (isCI = true) > long submitted labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Select an option:
[36m│[39m  [46m[90m a [39m[49m This is a somewhat long
[36m│[39m   label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label 
[36m│[39m  This is a somewhat long 
[36m│[39m  label This is a somewhat 
[36m│[39m  long label This is a 
[36m│[39m  somewhat long label This is
[36m│[39m   a somewhat long label This
[36m│[39m   is a somewhat long label
[36m│[39m  [90m[47m[7m b [27m[49m[39m Short label
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  Select an option:
[90m│[39m  [2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label [22m
[90m│[39m  [2mThis is a somewhat long [22m
[90m│[39m  [2mlabel This is a somewhat [22m
[90m│[39m  [2mlong label This is a [22m
[90m│[39m  [2msomewhat long label This is[22m
[90m│[39m  [2m a somewhat long label This[22m
[90m│[39m  [2m is a somewhat long label[22m",
  "
",
]
`;

exports[`text (isCI = true) > options are case-insensitive by default 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m A [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption A[22m",
  "
",
]
`;

exports[`text (isCI = true) > renders message with options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m a [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption A[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > selects option by keypress 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [46m[90m a [39m[49m Option A
[36m│[39m  [90m[47m[7m b [27m[49m[39m Option B
[36m└[39m
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption B[22m",
  "
",
]
`;

exports[`text (isCI = true) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "[36m◆[39m  foo
[46m[90m a [39m[49m Option A
[90m[47m[7m b [27m[49m[39m Option B

",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "[32m◇[39m  foo
[2mOption A[22m",
  "
",
]
`;
